<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="227dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_sluchawki"
        android:contentDescription="@string/logo_description" />

    <TextView
        android:id="@+id/logoText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/App_name"
        android:textAlignment="center"
        android:textColor="@color/gold"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.088" />

    <Button
        android:id="@+id/signIn_btn"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/radius_btn"
        android:text="@string/Sign_in"
        android:textAlignment="center"
        app:icon="@drawable/ic_google"
        app:iconTint="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoText" />

    <Button
        android:id="@+id/offline_btn"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/radius_btn"
        android:text="@string/offline_mode"
        android:textAlignment="center"
        app:icon="@drawable/ic_baseline_cloud_off_24"
        app:iconTint="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_btn" />

    <TextView
        android:id="@+id/footerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/footer_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>




